# Interactive-Learning-in-State-space

./: .gitignore  README.md  cartpole.py  linuxHelpFile.md  lunar_lander.py  reacher.py
B-COACH/: .gitignore
B-COACH/demonstration/: expert_extractor.py  final_modelextractor.py
B-COACH/models/: bco.py  bco_biped.py  bcoach.py  bcoach_acrobot.py  bcoach_biped.py  bcoach_cartpole.py  bcoach_contcartpole.py  bcoach_contmcar.py  bcoach_lunarlandercont.py  bcoach_mcar.py  bcoach_modified_biped.py  feedback.py  utils.py
B-COACH/scripts/: run_bco_biped.sh  run_bco_cartpole.sh  run_bco_lunarlandercont.sh  run_bco_mcar.sh  run_bcoach_acrobot.sh  run_bcoach_biped.sh  run_bcoach_cartpole.sh  run_bcoach_contcartpole.sh  run_bcoach_lunarlandercont.sh  run_bcoach_mcar.sh  test_bco_biped.sh  test_hcheetah.sh
B-COACH_IFDM/models/: bco_hcheetah.py  bco_lunarlandercont.py  bcoach.py  bcoach_acrobot.py  bcoach_biped.py  bcoach_contcartpole.py  bcoach_contmcar.py  bcoach_ifdm.py  bcoach_ifdm_cartpole.py  bcoach_ifdm_cartpolelunar.py  bcoach_ifdm_contcartpole.py  bcoach_ifdm_contmcar.py  bcoach_ifdm_lunarlander.py  bcoach_ifdm_lunarlandercont.py  bcoach_ifdm_mcar.py  bcoach_ifdm_reacher.py  bcoach_lunarlandercont.py  bcoach_modified_biped.py  bcoach_spm.py  bcoach_spm_cartpole.py  bcoach_spm_contmcar.py  fdm_cartpole.py  fdm_reacher.py  fdms.py  utils.py
B-COACH_IFDM/scripts/: run_bco_biped.sh  run_bco_hcheetah.sh  run_bco_reacher.sh  run_bcoach_biped.sh  run_bcoach_cartpole.sh  run_bcoach_ifdm_cartpole.sh  run_bcoach_ifdm_contcartpole.sh  run_bcoach_ifdm_contmcar.sh  run_bcoach_ifdm_lunarlander.sh  run_bcoach_ifdm_lunarlandercont.sh  run_bcoach_ifdm_mcar.sh  run_bcoach_mcar.sh  (+11 more)
BC/: .gitignore
BCO/: .gitignore
Human_Trials/: Participant Task Load Questionnaire.csv  Participant Task Load Questionnaire.ods
ILPO/: requirements.txt
KUKA_Task/: HelpFile.md  READMETODO.md
KUKA_Task/iiwa_tool_examples/: .gitignore  CMakeLists.txt  package.xml
KUKA_Task/iiwa_tool_examples/launch/: iiwa_tool.launch  iiwa_tool.rviz  iiwa_tool_command.launch  iiwa_tool_command_moveit.launch  iiwa_tool_control_mode.launch  iiwa_tool_read.launch
KUKA_Task/iiwa_tool_examples/src/: command_robot.cpp  command_robot_moveit.cpp  setting_control_mode.cpp
KUKA_Task/ros_ws/src/iiwa_stack_examples/iiwa_tool/iiwa_tool_description/: CMakeLists.txt  package.xml
KUKA_Task/ros_ws/src/iiwa_stack_examples/iiwa_tool/iiwa_tool_description/urdf/: iiwa_tool.urdf.xacro  tool.xacro  tool_pendulum.xacro
KUKA_Task/ros_ws/src/iiwa_stack_examples/two_iiwa/two_iiwa_control/: CMakeLists.txt  package.xml
KUKA_Task/ros_ws/src/iiwa_stack_examples/two_iiwa/two_iiwa_control/config/: iiwa2_control.yaml
KUKA_Task/ros_ws/src/iiwa_stack_examples/two_iiwa/two_iiwa_control/launch/: two_iiwa_control.launch
KUKA_Task/ros_ws/src/iiwa_stack_examples/two_iiwa/two_iiwa_gazebo/: CMakeLists.txt  package.xml
KUKA_Task/ros_ws/src/iiwa_stack_examples/two_iiwa/two_iiwa_gazebo/launch/: two_iiwa_gazebo.launch  two_iiwa_world.launch
MyBCO/: extract_obs.bash
OpenAIbaselines/: SJ_helpFile.md  gail_helpFile.md  gail_plotter.py
TIPS/: READMETODO.md
TeleOp_States/: READMETODO.md
gym_modifications/: __init__.py  reacher.py
stable-baselines-gail/: gail_cartpole.py  gail_lunarlandercont.py  gail_pendulum.py  gail_plotter.py  gail_reacher.py
(+2085 files in other folders)
