<?xml version="1.0"?>
<package>
  <name>iiwa_tool_description</name>
  <version>0.0.0</version>
  <description>The iiwa_tool_description package</description>

  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>

  <license>BSD</license>
  
  <build_depend>iiwa_description</build_depend>  
  <run_depend>iiwa_description</run_depend>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
