<?xml version="1.0"?>
<package>
  <name>two_iiwa_gazebo</name>
  <version>0.0.0</version>
  <description>This package allows to load TWO KUKA LBR IIWA robot onto Gazebo</description>
  <author email="salvo.virga@tum.de">Salvo Virga</author>
  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>iiwa_description</run_depend>
  <run_depend>gazebo_ros</run_depend> 

</package>
